RESOLVED FIXED24629
moving forward or backward a paragraph fails at edge of document
https://bugs.webkit.org/show_bug.cgi?id=24629
Summary moving forward or backward a paragraph fails at edge of document
Darin Adler
Reported 2009-03-16 15:34:01 PDT
You can reproduce this in editable HTML (such as in Mail) like this: 1. Type a paragraph that wraps without pressing return at the end. 2. Click at beginning of first line of paragraph. 3. Press Shift Option Down. --> Expected: Will select text to end of paragraph. --> Actual: Will not select anything.
Attachments
patch (6.87 KB, patch)
2009-03-16 15:39 PDT, Darin Adler
adele: review+
Darin Adler
Comment 1 2009-03-16 15:34:14 PDT
Darin Adler
Comment 2 2009-03-16 15:39:21 PDT
Darin Adler
Comment 3 2009-03-16 16:15:49 PDT
trac.webkit.org/changeset/41749
Note You need to log in before you can comment on or make changes to this bug.